[tool.poetry]
name = "bo4md"
version = "0.1.0"
description = "Bayesian Optimization for Molecular Dynamics Simulation Automation"
authors = ["Tianhong Tan <tianhong.tan@wisc.edu>"]
readme = "README.md"
packages = [{ include = "bo4md", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Cross-platform defaults (CPU / macOS Metal)
torch = "2.6.0"
torchvision = "0.21.0"
torchaudio = "2.6.0"
botorch = "0.15.1"
matplotlib = "3.10.6"

# Optional group for CUDA 12.4 users (Windows/Linux with NVIDIA GPUs)
[tool.poetry.group.cuda.dependencies]
torch = { version = "2.6.0", source = "pytorch-cu124" }
torchvision = { version = "0.21.0", source = "pytorch-cu124" }
torchaudio = { version = "2.6.0", source = "pytorch-cu124" }

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
